--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,9 +24,11 @@
     "crocks": "^0.12.4",
     "daggy": "^1.4.0",
     "deep-equal": "^2.0.1",
+    "event-stream": "^4.0.1",
     "fantasy-land": "^4.0.1",
     "ramda": "^0.27.0",
-    "readable-stream": "^3.6.0"
+    "readable-stream": "^3.6.0",
+    "stream-reduce": "^1.0.3"
   },
   "devDependencies": {
     "minify-stream": "^1.2.1"
